--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -6,37 +6,41 @@
     <link rel="stylesheet" th:href="@{/css/sign-up.css}" />
 </head>
 
-<body>
-<header th:replace="~{fragments/header.html :: header-common}"></header>
+<body class="text-center">
 
-<main class="form-signup text-center w-100 m-auto">
-    <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
-        <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
-        <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
-        <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" placeholder="name@example.com" required>
-            <label for="floatingInputTop">Email address</label>
-            <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
-        </div>
-        <div class="form-floating">
-            <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" placeholder="Username" required>
-            <label for="floatingInputMiddle">Username</label>
-            <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</small>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
-            <label for="floatingInputBottom">Password</label>
-            <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-<!--            <small id="submitHelp" class="form-text text-muted">-->
-<!--                <a href="#">terms</a>-->
-<!--            </small>-->
-    </form>
+<main class="form-signup w-100 m-auto">
+    <div class="container">
+        <form class="needs-validation" action="#" th:action="@{/sign-up}" th:object="${signUpForm}" method="post" novalidate>
+            <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
+            <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+
+            <div class="form-floating">
+                <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" placeholder="name@example.com" required>
+                <label for="floatingInputTop">Email address</label>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
+            </div>
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" placeholder="Username" required>
+                <label for="floatingInputMiddle">Username</label>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</small>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
+                <label for="floatingInputBottom">Password</label>
+                <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
+            </div>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+    <!--            <small id="submitHelp" class="form-text text-muted">-->
+    <!--                <a href="#">terms</a>-->
+    <!--            </small>-->
+        </form>
+    </div>
+
+    <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 </main>
 
-<footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
+
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
 </html>
