--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -14,16 +14,18 @@
             <!-- profile image -->
             <svg th:if="${#strings.isEmpty(account.profileImage)}"
                  class="img-fluid float-left rounded img-thumbnail"
-                 th:data-jdenticon-value="${account.username}" width="136" height="136"></svg>
+                 th:data-jdenticon-value="${account.username}"
+                 width="136" height="136"></svg>
             <img th:if="${!#strings.isEmpty(account.profileImage)}"
                  class="img-fluid float-left rounded img-thumbnail"
-                 th:src="${account.profileImage}" width="136" height="136"/>
+                 th:src="${account.profileImage}"
+                 width="136" height="136"/>
         </div>
         <div class="col-8">
             <!-- username -->
             <h1 class="display-4 " th:text="${account.username}">username</h1>
             <!-- bio -->
-            <p class="lead" th:if="${!#strings.isEmpty(account.bio)}" th:text="${account.bio}">bio</p>
+            <p class="lead" th:if="${!#strings.isEmpty(account.bio)}" th:text="${account.bio}">account.bio</p>
             <p class="lead" th:if="${#strings.isEmpty(account.bio) && isOwner}">Introduce yourself</p>
         </div>
     </div>
@@ -33,12 +35,12 @@
             <!-- tab -->
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                 <a class="nav-link active" id="v-pills-intro-tab" data-toggle="pill" href="#v-pills-profile"
-                   role="tab" aria-controls="v-pills-profile" aria-selected="true" th:text="intro">Intro</a>
+                   role="tab" aria-controls="v-pills-profile" aria-selected="true" th:text="#{intro}">Intro</a>
                 <a class="nav-link" id="v-pills-party-tab" data-toggle="pill" href="#v-pills-party"
-                   role="tab" aria-controls="v-pills-party" aria-selected="false" th:text="party">Party</a>
+                   role="tab" aria-controls="v-pills-party" aria-selected="false" th:text="#{party}">Party</a>
                 <div th:if="${isOwner}">
                 <a class="nav-link" id="v-pills-profile-settings-tab" data-toggle="pill" href="#" th:href="@{/settings/profile}"
-                   role="tab" aria-controls="v-pills-profile-settings" aria-selected="false" th:text="profile.setting">Profile Settings</a>
+                   role="tab" aria-controls="v-pills-profile-settings" aria-selected="false" th:text="#{settings}">Profile Settings</a>
                 </div>
             </div>
         </div>
