--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -11,106 +11,100 @@
 
 <main class="container">
     <div class="row mt-5 justify-content-center">
-        <div class="col-2">
+        <div class="col-lg-2">
+            <!-- profile image -->
+            <svg th:if="${#strings.isEmpty(profile.profileImage)}"
+                 class="img-fluid float-left rounded img-thumbnail"
+                 th:data-jdenticon-value="${account.username}"
+                 width="136" height="136"></svg>
+            <img th:if="${!#strings.isEmpty(profile.profileImage)}"
+                 class="img-fluid float-left rounded img-thumbnail"
+                 th:src="${profile.profileImage}"
+                 width="136" height="136" alt="name" th:alt="${account.username}"/>
+        </div>
+        <div class="col-lg-4">
+            <!-- username -->
+            <h1 class="display-4 " th:text="${account.username}">username</h1>
+        </div>
+        <div class="col-lg-4">
+            <!-- alert -->
+            <div th:if="${message}" class="alert alert-info alert-dismissible fade show" role="alert">
+                <span th:text="${message}">message</span>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mt-3 justify-content-center">
+        <div class="col-lg-2 mb-2">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
         </div>
-
-        <div class="col-8"><!-- introduce -->
-            <!-- alert -->
-            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
-                <span th:text="${message}">message</span>
-            </div>
-
-            <div class="row">
-                <!-- title -->
-                <h2 class="col-sm-12" th:text="${account.username}">username</h2>
-            </div>
-
-            <div class="row mt-3 justify-content-center"><!-- update form and profile image -->
-                <form class="col-sm-6"
-                      action="#" th:action="@{/settings/profile}"
-                      th:object="${profile}" method="post" novalidate><!-- update form -->
-                    <!-- update form -->
-                    <div class="form-group row mt-2">
-                        <label for="bio">bio</label>
-                        <input id="bio" type="text" th:field="*{bio}" class="form-control"
-                               placeholder="I love potato." aria-describedby="bioHelp" required>
-                        <!--<small id="bioHelp" class="form-text text-muted">
-                            You can write up to 35 letters.
-                        </small>-->
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
-                            Please enter more short.
-                        </small>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="url">URL</label>
-                        <input id="url" type="url" th:field="*{url}" class="form-control"
-                               placeholder="http://github.com/steve" aria-describedby="urlHelp" required>
-                        <!--<small id="urlHelp" class="form-text text-muted">
-                            GitHub, Instagram, YouTube...
-                        </small>-->
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
-                            Please enter URL.
-                        </small>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="company">Jobs</label>
-                        <input id="company" type="text" th:field="*{occupation}" class="form-control"
-                               placeholder="Programmer" aria-describedby="occupationHelp" required>
-                        <!--<small id="occupationHelp" class="form-text text-muted">
-                        </small>-->
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="location">Location</label>
-                        <input id="location" type="text" th:field="*{location}" class="form-control"
-                               placeholder="Redmond, WA, USA"
-                               aria-describedby="locationdHelp" required>
-                        <!--<small id="locationdHelp" class="form-text text-muted">
-                            London, NewYork, Tokyo, Seoul
-                        </small>-->
-                    </div>
-                    <div class="form-group row mt-2">
-                        <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
-                    </div>
-                    <div class="form-group row mt-2">
-                        <button class="btn btn-primary btn-block" type="submit"
-                                aria-describedby="submitHelp">Update</button>
-                    </div>
-                </form>
-
-                <div class="col-sm-6">
-                    <!-- profile image -->
-                    <div class="card text-center">
-                        <div class="card-header">
-                            Profile Image
-                        </div>
-                        <div id="current-profile-image" class="mt-3">
-                            <svg th:if="${#strings.isEmpty(profile.profileImage)}"
-                                 class="rounded"
-                                  th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
-                            <img th:if="${!#strings.isEmpty(profile.profileImage)}"
-                                 class="rounded"
-                                 th:src="${profile.profileImage}"
-                                 width="125" height="125" alt="name" th:alt="${account.username}"/>
-                        </div>
-                        <div id="new-profile-image" class="mt-3"></div>
+        <div class="col-lg-8">
+            <div class="row justify-content-center">
+                <!-- profile image -->
+                <div class="mb-2">
+                    <label for="profile-image" class="form-label">Profile Image</label>
+                    <div id="profile-image" class="card text-center">
                         <div class="card-body">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="profile-image-file">
-                                <label class="custom-file-label" for="profile-image-file">Update</label>
+                            <div id="new-profile-image"></div>
+                            <div id="custom-file" class="custom-file mt-3">
+                                <input type="file" class="custom-file-input" id="profile-image-file" hidden>
+                                <label class="btn btn-outline-secondary custom-file-label" for="profile-image-file">Select file</label>
                             </div>
-                            <div id="new-profile-image-control" class="mt-3">
-                                <button class="btn btn-outline-primary btn-block" id="cut-button">Edit</button>
-                                <button class="btn btn-outline-success btn-block" id="confirm-button">Confirm</button>
+                            <div id="new-profile-image-control" class="my-3">
+                                <button class="btn btn-outline-primary btn-block" id="cut-button">Cut</button>
                                 <button class="btn btn-outline-warning btn-block" id="reset-button">Cancel</button>
                             </div>
-                            <div id="cropped-new-profile-image" class="mt-3"></div>
+                            <div id="cropped-new-profile-image"> </div>
+                            <div id="cropped-new-profile-image-control" class="my-3">
+                                <button class="btn btn-outline-success btn-block" id="confirm-button">Confirm</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <!-- update form -->
+                <form action="#" th:action="@{/settings/profile}" th:object="${profile}" method="post" novalidate>
+                    <div class="form-group mb-2">
+                        <label for="bio" class="form-label">bio</label>
+                        <input id="bio" type="text" th:field="*{bio}" class="form-control" th:errorclass="field-error"
+                               placeholder="I love potato." aria-describedby="bioHelp" required>
+                        <small class="form-text text-danger field-error" th:errors="*{bio}">
+                            Please enter more short.
+                        </small>
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="url" class="form-label">URL</label>
+                        <input id="url" type="url" th:field="*{url}" class="form-control" th:errorclass="field-error"
+                               placeholder="http://github.com/steve" aria-describedby="urlHelp" required>
+                        <small class="form-text text-danger field-error" th:errors="*{url}">
+                            Please enter URL.
+                        </small>
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="company" class="form-label">Jobs</label>
+                        <input id="company" type="text" th:field="*{occupation}" class="form-control" th:errorclass="field-error"
+                               placeholder="Programmer" aria-describedby="occupationHelp" required>
+                        <!--<small id="occupationHelp" class="form-text text-muted">
+                        </small>-->
+                        <small class="form-text text-danger field-error" th:errors="*{occupation}">
+                            Please enter Jobs.
+                        </small>
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="location" class="form-label">Location</label>
+                        <input id="location" type="text" th:field="*{location}" class="form-control" th:errorclass="field-error"
+                               placeholder="Incheon, South Korea" aria-describedby="locationdHelp" required>
+                    </div>
+
+                    <div class="form-group mb-2">
+                        <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+                    </div>
+                    <div class="form-group d-flex align-items-end flex-column">
+                        <button class="btn btn-primary btn-block" type="submit">Update</button>
+                    </div>
+                </form>
             </div>
-        </div><!-- introduce end -->
+        </div>
     </div>
 </main>
 
@@ -130,6 +124,8 @@
         let $currentProfileImage = $("#current-profile-image");
         let $resultImage = $("#cropped-new-profile-image");
         let $profileImage = $("#profileImage");
+        let $profileImageFile = $("#profile-image-file");
+        let $customFile = $("#custom-file");
 
         $newProfileImage.hide();
         $cutBtn.hide();
@@ -154,6 +150,7 @@
                         $newProfileImage.html(img);
                         $newProfileImage.show();
                         $currentProfileImage.hide();
+                        $customFile.hide();
 
                         let $newImage = $(img);
                         $newImage.cropper({aspectRatio: 1});
@@ -171,12 +168,14 @@
 
         $resetBtn.click(function() {
             $currentProfileImage.show();
+            $customFile.show();
             $newProfileImage.hide();
             $resultImage.hide();
             $resetBtn.hide();
             $cutBtn.hide();
             $confirmBtn.hide();
             $profileImage.val('');
+            $profileImageFile.val('');
         });
 
         $cutBtn.click(function () {
