--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -78,24 +78,100 @@
                     });
                 }
 
-                function onAdd(e) {
+                // tag added callback
+                function onAddTag(e) {
                     tagRequest("/add", e.detail.data.value);
+                    // console.log("onAddTag: ", e.detail);
+                    // console.log("original input value: ", inputElm.value)
+                    // tagify.off('add', onAddTag) // exmaple of removing a custom Tagify event
                 }
 
-                function onRemove(e) {
+                // tag remvoed callback
+                function onRemoveTag(e) {
                     tagRequest("/remove", e.detail.data.value);
+                    console.log("onRemoveTag:", e.detail, "tagify instance value:", tagify.value)
                 }
 
-                var tagInput = document.querySelector("#tags");
-                var tagify = new Tagify(tagInput, {
+                // on character(s) added/removed (user is typing/deleting)
+                function onInput(e) {
+                    console.log("onInput: ", e.detail);
+                    tagify.whitelist = null; // reset current whitelist
+                    tagify.loading(true) // show the loader animation
+
+                    // get new whitelist from a delayed mocked request (Promise)
+                    mockAjax()
+                        .then(function (result) {
+                            tagify.settings.whitelist = result.concat(tagify.value) // add already-existing tags to the new whitelist array
+
+                            tagify
+                                .loading(false)
+                                // render the suggestions dropdown.
+                                .dropdown.show(e.detail.value);
+                        })
+                        .catch(err => tagify.dropdown.hide())
+                }
+
+                function onTagEdit(e) {
+                    console.log("onTagEdit: ", e.detail);
+                }
+
+                // invalid tag added callback
+                function onInvalidTag(e) {
+                    console.log("onInvalidTag: ", e.detail);
+                }
+
+                // invalid tag added callback
+                function onTagClick(e) {
+                    console.log(e.detail);
+                    console.log("onTagClick: ", e.detail);
+                }
+
+                function onTagifyFocusBlur(e) {
+                    console.log(e.type, "event fired")
+                }
+
+                function onDropdownSelect(e) {
+                    console.log("onDropdownSelect: ", e.detail)
+                }
+
+                var mockAjax = (function mockAjax() {
+                    var timeout;
+                    return function (duration) {
+                        clearTimeout(timeout); // abort last request
+                        return new Promise(function (resolve, reject) {
+                            timeout = setTimeout(resolve, duration || 700, whitelist)
+                        })
+                    }
+                })()
+
+                var inputElm = document.querySelector('input[name=tags-outside]')
+
+                // init Tagify script on the above inputs
+                var tagify = new Tagify(inputElm, {
                     pattern: /^.{0,20}$/,
                     whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
-                    dropdown : {
-                        enabled: 1, // suggest tags after a single character input
-                    } // map tags
-                });
-                tagify.on("add", onAdd);
-                tagify.on("remove", onRemove);
+                    dropdown: {
+                        position: "input",
+                        enabled: 0 // always opens dropdown when input gets focus
+                    }
+                })
+
+                // Chainable event listeners
+                tagify.on('add', onAddTag)
+                    .on('remove', onRemoveTag)
+                    // .on('input', onInput)
+                    .on('edit', onTagEdit)
+                    .on('invalid', onInvalidTag)
+                    .on('click', onTagClick)
+                    .on('focus', onTagifyFocusBlur)
+                    .on('blur', onTagifyFocusBlur)
+                    .on('dropdown:hide dropdown:show', e => console.log(e.type))
+                    .on('dropdown:select', onDropdownSelect)
+
+                // "remove all tags" button event listener
+                document.querySelector('.tags--removeAllBtn')
+                    .addEventListener('click', tagify.removeAllTags.bind(tagify))
+
                 // add a class to Tagify's input element
                 tagify.DOM.input.classList.add('form-control');
                 // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
@@ -106,8 +182,8 @@
 
     <div th:fragment="update-zones (baseUrl)">
         <script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
-        <script type="application/javascript">
-            $(function () {
+        <script type="application/javascript" th:inline="javascript">
+            $(function() {
                 function tagRequest(url, zoneName) {
                     $.ajax({
                         dataType: "json",
@@ -124,26 +200,99 @@
                     });
                 }
 
-                function onAdd(e) {
+                // tag added callback
+                function onAddTag(e) {
                     tagRequest("/add", e.detail.data.value);
+                    // console.log("onAddTag: ", e.detail);
+                    // console.log("original input value: ", inputElm.value)
+                    // tagify.off('add', onAddTag) // exmaple of removing a custom Tagify event
                 }
 
-                function onRemove(e) {
+                // tag remvoed callback
+                function onRemoveTag(e) {
                     tagRequest("/remove", e.detail.data.value);
+                    console.log("onRemoveTag:", e.detail, "tagify instance value:", tagify.value)
                 }
 
-                var tagInput = document.querySelector("#zones");
+                // on character(s) added/removed (user is typing/deleting)
+                function onInput(e) {
+                    console.log("onInput: ", e.detail);
+                    tagify.whitelist = null; // reset current whitelist
+                    tagify.loading(true) // show the loader animation
 
-                var tagify = new Tagify(tagInput, {
-                    enforceWhitelist: true,
+                    // get new whitelist from a delayed mocked request (Promise)
+                    mockAjax()
+                        .then(function (result) {
+                            tagify.settings.whitelist = result.concat(tagify.value) // add already-existing tags to the new whitelist array
+
+                            tagify
+                                .loading(false)
+                                // render the suggestions dropdown.
+                                .dropdown.show(e.detail.value);
+                        })
+                        .catch(err => tagify.dropdown.hide())
+                }
+
+                function onTagEdit(e) {
+                    console.log("onTagEdit: ", e.detail);
+                }
+
+                // invalid tag added callback
+                function onInvalidTag(e) {
+                    console.log("onInvalidTag: ", e.detail);
+                }
+
+                // invalid tag added callback
+                function onTagClick(e) {
+                    console.log(e.detail);
+                    console.log("onTagClick: ", e.detail);
+                }
+
+                function onTagifyFocusBlur(e) {
+                    console.log(e.type, "event fired")
+                }
+
+                function onDropdownSelect(e) {
+                    console.log("onDropdownSelect: ", e.detail)
+                }
+
+                var mockAjax = (function mockAjax() {
+                    var timeout;
+                    return function (duration) {
+                        clearTimeout(timeout); // abort last request
+                        return new Promise(function (resolve, reject) {
+                            timeout = setTimeout(resolve, duration || 700, whitelist)
+                        })
+                    }
+                })()
+
+                var inputElm = document.querySelector('input[name=tags-outside]')
+
+                // init Tagify script on the above inputs
+                var tagify = new Tagify(inputElm, {
+                    pattern: /^.{0,50}$/,
                     whitelist: JSON.parse(document.querySelector("#whitelist").textContent),
-                    dropdown : {
-                        enabled: 1, // suggest tags after a single character input
-                    } // map tags
-                });
+                    dropdown: {
+                        position: "input",
+                        enabled: 0 // always opens dropdown when input gets focus
+                    }
+                })
 
-                tagify.on("add", onAdd)
-                .on("remove", onRemove);
+                // Chainable event listeners
+                tagify.on('add', onAddTag)
+                    .on('remove', onRemoveTag)
+                    // .on('input', onInput)
+                    .on('edit', onTagEdit)
+                    .on('invalid', onInvalidTag)
+                    .on('click', onTagClick)
+                    .on('focus', onTagifyFocusBlur)
+                    .on('blur', onTagifyFocusBlur)
+                    .on('dropdown:hide dropdown:show', e => console.log(e.type))
+                    .on('dropdown:select', onDropdownSelect)
+
+                // "remove all tags" button event listener
+                document.querySelector('.tags--removeAllBtn')
+                    .addEventListener('click', tagify.removeAllTags.bind(tagify))
 
                 // add a class to Tagify's input element
                 tagify.DOM.input.classList.add('form-control');
