--- a/src/main/resources/templates/settings/account.html
+++ b/src/main/resources/templates/settings/account.html
@@ -8,60 +8,38 @@
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<main>
-    <div class="container">
-
-    <div class="row mt-5 justify-content-center">
-
-        <div class="col-2">
+<main class="container">
+    <div class="row my-5 mx-5 justify-content-center">
+        <div class="col-md-3 mb-3">
             <div th:replace="fragments.html :: settings-menu(currentMenu='account')"></div>
         </div>
-
-        <div class="col-8">
-
-            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+        <div class="col-md-6">
+            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mb-3" role="alert">
                 <span th:text="${message}">Update Complete</span>
             </div>
-
-            <div class="row">
-                <h2 class="col-12">Account</h2>
-            </div>
-
-            <div class="row mt-3">
-                <form class="needs-validation col-12" action="#" th:action="@{/settings/account}" th:object="${usernameForm}" method="post" novalidate>
-                    <div class="row mt-2">
-                        <h5>Username</h5>
-                    </div>
-                    <div class="row">
-                        <div class="form-group">
-                            <input id="username" type="text" th:field="*{newUsername}" class="form-control" aria-describedby="usernameHelp" required>
-                            <small id="usernameHelp" class="form-text text-muted">
-                            </small>
-                            <small class="invalid-feedback">Enter your new username</small>
-                            <small class="form-text text-danger" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">username Error</small>
-                        </div>
-                    </div>
-                    <div class="row mt-2">
-                        <div class="form-group">
-                            <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">Confirm</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-
-            <div class="row mt-4">
-                <div class="col-sm-12">
-                    <h5 class="text-danger">Account Delete</h5>
-                    <div class="alert alert-danger" role="alert">
-                        This account can not be deleted.
-                    </div>
+            <form class="needs-validation" action="#" th:action="@{/settings/account}" th:object="${usernameForm}" method="post" novalidate>
+                <div class="form-group mb-2">
+                    <label for="username" class="form-label">Username</label>
+                    <input id="username" type="text" th:field="*{newUsername}" class="form-control" aria-describedby="usernameHelp" required>
+                    <small id="usernameHelp" class="form-text text-muted"></small>
+                    <small class="invalid-feedback">Enter your new username</small>
+                    <small class="form-text text-danger" th:if="${#fields.hasErrors('newUsername')}" th:errors="*{newUsername}">username Error</small>
+                </div>
+                <div class="form-group d-flex align-items-end flex-column">
+                    <button class="btn btn-outline-primary" type="submit" aria-describedby="submitHelp">Confirm</button>
+                </div>
+            </form>
+            <div class="col-lg-12">
+                <h5 class="text-danger">Account Delete</h5>
+                <div class="alert alert-danger" role="alert">
+                    This account can not be deleted.
+                </div>
+                <div class="form-group d-flex align-items-end flex-column">
                     <button class="btn btn-outline-danger disabled">Account Delete</button>
                 </div>
             </div>
-
         </div>
     </div>
-</div>
 </main>
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
