--- a/src/main/resources/templates/settings/tags.html
+++ b/src/main/resources/templates/settings/tags.html
@@ -3,30 +3,28 @@
 
 <head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
     <title th:text="#{title}">title</title>
-    <link rel="stylesheet" th:href="@{/css/tagify.css}">
+    <link rel="stylesheet" href="/css/tagify.css">
 </head>
 
 <body>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
 <main class="container">
-    <div class="row my-5 mx-4 justify-content-center">
-        <div class="col-lg-2 mb-2">
+    <div class="row my-5 mx-5 justify-content-center">
+        <div class="col-md-3 mb-3">
             <!-- menu -->
             <div th:replace="fragments.html :: settings-menu(currentMenu='tags')"></div>
         </div>
-        <div class="col-lg-8">
+        <div class="col-md-6">
             <!-- description -->
             <div class="alert alert-dark" role="alert">
                 You can add a tag with comma or enter key.
             </div>
             <div id="whitelist" th:text="${whitelist}" hidden></div>
-            <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(tags, ',')}"
-                   class="tagify-outside" aria-describedby="tagHelp"/>
+            <input name="tags-outside" class="tagify--outside" th:value="${#strings.listJoin(tags, ',')}"/>
         </div>
     </div>
 </main>
-
 
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: ajax-csrf-header}"></script>
