--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
     <title th:text="#{title}">title</title>
     <link rel="stylesheet" th:href="@{/css/tagify.css}">
 </head>
@@ -11,28 +11,19 @@
 
 <main>
     <div class="container">
-        <div class="row mt-5 justify-content-center">
-            <div class="col-2"><!-- menu -->
+        <div class="row my-5 mx-5 justify-content-center">
+            <div class="col-md-3 mb-3"><!-- menu -->
                 <div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
             </div>
 
-            <div class="col-8">
-                <div class="row">
-                    <!-- title -->
-                    <h2 class="col-12">Zones</h2>
+            <div class="col-md-6">
+                <!-- description -->
+                <div class="alert alert-dark" role="alert">
+                    You can add a zone with comma or enter key
                 </div>
-                <div class="row">
-                    <div class="col-12">
-                        <!-- description -->
-                        <div class="alert alert-info" role="alert">
-                            You can add a zone with comma or enter key
-                        </div>
-                        <!-- function -->
-                        <div id="whitelist" th:text="${whitelist}" hidden></div>
-                        <input id="zones" type="text" name="zones" th:value="${#strings.listJoin(zones, ',')}"
-                               class="tagify-outside" aria-describedby="tagHelp"/>
-                    </div>
-                </div>
+                <!-- function -->
+                <div id="whitelist" th:text="${whitelist}" hidden></div>
+                <input name="tags-outside" class="tagify--outside" th:value="${#strings.listJoin(zones, ',')}"/>
             </div>
         </div>
     </div>
